<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.calculator.MainActivity">


    <Button
        android:text="@string/addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:id="@+id/button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/secondNumber"
        android:hint="@string/hint_two"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/secondNumberText"
        android:layout_alignBottom="@+id/secondNumberText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/firstNumber"
        android:hint="@string/hint_one"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/first_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstNumberText"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_alignBaseline="@+id/firstNumber"
        android:layout_alignBottom="@+id/firstNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/second_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/secondNumberText"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_below="@+id/firstNumber"
        android:layout_alignRight="@+id/firstNumberText"
        android:layout_alignEnd="@+id/firstNumberText" />
</RelativeLayout>
